# choreographer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.txt  ERRATA.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.circleci/: config.yml
.github/: action.yaml
.github/actions/: action.yml
.github/workflows/: common-test-fragment.yml  download_chrome.ps  download_chrome.ps1  download_chrome.sh  publish_testpypi.yml  ruff.yml  test.yml
app/: app.py  app_devtools.py  app_reference  app_utils.py  chrome_wrapper.py  reference.py  test1.py
app/old_references/: reference
choreographer/: DIR_INDEX.txt  README.txt  __init__.py  _brower.py  _browser.py  _browser_base.py  _browser_sync.py  _cli_tools_no_qa.py  _cli_utils.py  _cli_utils_no_qa.py  _pipe.py  _tab.py  browser.py  browser_async.py  browser_sync.py  chrome_wrapper.py  cli_utils.py  errors.py  pipe.py  protocol.py  session.py  system.py  target.py  tempfile.py
choreographer/_brokers/: README.txt  __init__.py  _async.py  _sync.py
choreographer/_browser/: chromium.py
choreographer/_browsers/: README.txt  __init__.py  _chrome_constants.py  _errors.py  chromium.py
choreographer/_channels/: __init__.py  _errors.py  _wire.py  pipe.py
choreographer/_cli_utils/: __init__.py  _cli_utils.py  _cli_utils_no_qa.py
choreographer/_devtools_protocol_layer/: __init__.py  _protocol.py  _session.py  _target.py
choreographer/_sys_utils/: __init__.py  _kill.py  _tempfile.py  _tmpfile.py  _which.py
choreographer/_system_utils/: _chrome_wrapper.py  _system.py  _tempfile.py
choreographer/browsers/: __init__.py  _chrome_constants.py  _errors.py  _interface_type.py  _unix_pipe_chromium_wrapper.py  chromium.py
choreographer/browsers/packaged_chromium_libs/: libasound.so.2.0.0  libatk-1.0.so.0  libatk-1.0.so.0.25609.1  libatk-bridge-2.0.so.0  libatk-bridge-2.0.so.0.0.0  libatspi.so.0  libatspi.so.0.0.1  libavahi-client.so.3  libavahi-common.so.3  libcairo.so.2  libcairo.so.2.11804.4  libcups.so.2  libdatrie.so.1  libexpat.so.1.10.1  libfribidi.so.0  libgbm.so.1  libgbm.so.1.0.0  libgio-2.0.so.0.8400.0  libglib-2.0.so.0.8400.0  libgobject-2.0.so.0.8400.0  libpango-1.0.so.0.5600.3  libpixman-1.so.0  libthai.so.0  libwayland-server.so.0  libxkbcommon.so.0.8.1
choreographer/channels/: README.txt  __init__.py  _errors.py  _interface_type.py  _wire.py  pipe.py
choreographer/cli/: README.txt  __init__.py  _cli_utils.py  _cli_utils_no_qa.py
choreographer/protocol/: __init__.py  _interfaces_type.py  _protocol.py  _protocol_sync.py  _session.py  _target.py  devtools_async.py  devtools_sync.py  sync.py
choreographer/utils/: __init__.py  _kill.py  _manual_thread_pool.py  _tmpfile.py  _which.py
devtools/: Browser.py  __init__.py  browser.py  chrome_wrapper.py  connection.py  pipe.py  protocol.py  session.py  system.py  tab.py  target.py  utils.py
devtools.egg-info/: PKG-INFO  SOURCES.txt
docker_tests/: Dockerfile.compat-libs  Dockerfile.slim-libs  LIBS_NEEDED  PACKAGES_NEEDED  as_shell  run_compat-libs  run_slim-libs
docker_tests/slim-libs/libs/usr/lib/x86_64-linux-gnu/: libcups.so.2
docs/: Ubuntu_Errata.md
kaleido/: app.py
site/: 404.html  index.html  sitemap.xml
site/api/choreographer/: index.html
site/api/choreographer.browser_async/: index.html
site/api/choreographer.browser_sync/: index.html
site/api/choreographer.browsers/: index.html
site/api/choreographer.browsers.chromium/: index.html
site/api/choreographer.channels/: index.html
site/api/choreographer.channels.pipe/: index.html
site/api/choreographer.cli/: index.html
site/api/choreographer.errors/: index.html
site/api/choreographer.protocol/: index.html
site/api/choreographer.protocol.devtools_async/: index.html
site/api/choreographer.protocol.devtools_sync/: index.html
site/api/choreographer.protocol.sync/: index.html
site/api/choreographer.utils/: index.html
site/assets/javascripts/: bundle.88dd0f4e.min.js  bundle.88dd0f4e.min.js.map
site/assets/javascripts/lunr/: tinyseg.js  wordcut.js
site/assets/javascripts/lunr/min/: lunr.da.min.js  lunr.de.min.js  lunr.du.min.js  lunr.fi.min.js  lunr.fr.min.js  lunr.it.min.js  lunr.nl.min.js  lunr.no.min.js  lunr.pt.min.js  lunr.sv.min.js
site/assets/javascripts/workers/: search.6ce7567c.min.js  search.6ce7567c.min.js.map
site/assets/stylesheets/: main.6f8fc17f.min.css  main.6f8fc17f.min.css.map
src/choreographer/: __init__.py  browser_async.py  pyrightconfig.json
src/choreographer/_brokers/: _async.py
src/choreographer/browsers/: __init__.py  _errors.py  _interface_type.py  chromium.py
src/choreographer/channels/: _interface_type.py  pipe.py
src/choreographer/cli/: _cli_utils.py  _cli_utils_no_qa.py  defaults.py
src/choreographer/protocol/: devtools_async.py  devtools_async_helpers.py
src/choreographer/resources/: last_known_good_chrome.json
src/choreographer/utils/: README.txt  _kill.py  _manual_thread_pool.py  _which.py
tests/: README.md  conftest.py  test_browser.py  test_browser_search.py  test_devtools_async_helpers.py  test_get_chrome.py  test_placeholder.py  test_process.py  test_serializer.py  test_session.py  test_tab.py
