[build-system]
requires = ["setuptools>=65.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "choreographer"
description = "Devtools Protocol implementation for chrome."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [
  {name = "Andrew Pikul", email="ajpikul@gmail.com"},
  {name = "Neyberson Atencio", email="neyberatencio@gmail.com"}
  ]
maintainers = [
  {name = "Andrew Pikul", email = "ajpikul@gmail.com"},
]
[project.urls]
Homepage = "https://github.com/plotly/choreographer"
Repository = "https://github.com/geopozo/logistro"

dependencies = [
  "logistro>=1.0.2",
  "simplejson",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-xdist",
  "async-timeout",
  "poethepoet>=0.31.1",
  "numpy"
]

# uv doens't allow dependency groups to have separate python requirements
# it resolves everything all at once
# this group we need to require higher python
# and only resolve if explicitly asked for

#docs = [
#    "mkquixote @ git+ssh://git@github.com/geopozo/mkquixote",
#    "mkdocs>=1.6.1",
#    "mkdocs-material>=9.5.49",
#]

[project.scripts]
choreo_diagnose = "choreographer.cli_utils:diagnose"
choreo_get_browser = "choreographer.cli_utils:get_browser_cli"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
          "ANN", # no types
          "EM", # allow strings in raise(), despite python being ugly about it
          "TRY003", # allow long error messages inside raise()
          "D203", # No blank before class docstring (D211 = require blank line)
          "D212", # Commit message style docstring is D213, ignore D212
          "COM812", # manual says linter rule conflicts with formatter
          "ISC001", # manual says litner rule conflicts with formatter
          "RET504", # Allow else if unnecessary because more readable
          "RET505", # Allow else if unnecessary because more readable
          "RET506", # Allow else if unnecessary because more readable
          "RET507", # Allow else if unnecessary because more readable
          "RET508", # Allow else if unnecessary because more readable
          "RUF012", # We don't do typing, so no typing
          "SIM105", # Too opionated (try-except-pass)
          ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
              "D", # ignore docstring errors
              "S101", # allow assert
              "INP001", # no need for __init__ in test directories
            ]

# Format breaks this anyway
# [tool.ruff.lint]
# ignore = ["E701"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
log_cli = true

[tool.poe.tasks]
_test_proc = "pytest -W error -n auto -v -rfE --capture=fd tests/test_process.py"
_test_fn = "pytest -W error -n auto -v -rfE --ignore=tests/test_process.py"
_debug-test_proc = "pytest -W error -vvx -rA --capture=tee-sys tests/test_process.py"
_debug-test_fn = "pytest -W error -vvvx -rA --capture=tee-sys --ignore=tests/test_process.py"

# the capture on these is weird, the mechanics are weird, i forget exactly whats its doing
[tool.poe.tasks.test]
sequence = ["_test_proc", "_test_fn"]
help = "Run all tests quickly"

[tool.poe.tasks.debug-test]
sequence = ["_debug-test_proc", "_debug-test_fn"]
help = "Run test by test, slowly, quitting after first error"

[tool.poe.tasks.filter-test]
cmd = "pytest -W error -vvvx -rA --capture=tee-sys"
help = "Run any/all tests one by one with basic settings: can include filename and -k filters"
